Apply List.of() consistency to Student tests
Co-authored-by: krmayank01 <98836608+krmayank01@users.noreply.github.com>